--- a/Models/model.ipynb
+++ b/Models/model.ipynb
@@ -16,47 +16,6 @@
       "Requirement already satisfied: scikit-learn in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.6.0)\n",
       "Requirement already satisfied: pydantic in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.9.2)\n",
       "Requirement already satisfied: huggingface_hub in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.23.4)\n",
-      "Collecting pyngrok\n",
-      "  Downloading pyngrok-7.2.2-py3-none-any.whl.metadata (8.4 kB)\n",
-      "Requirement already satisfied: starlette<0.42.0,>=0.40.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fastapi) (0.41.3)\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fastapi) (4.11.0)\n",
-      "Requirement already satisfied: click>=7.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from uvicorn) (8.1.7)\n",
-      "Requirement already satisfied: h11>=0.8 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from uvicorn) (0.14.0)\n",
-      "Requirement already satisfied: filelock in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (3.14.0)\n",
-      "Requirement already satisfied: numpy<2.0,>=1.17 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (1.26.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (24.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (6.0.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (2024.5.15)\n",
-      "Requirement already satisfied: requests in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (2.31.0)\n",
-      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (0.4.3)\n",
-      "Requirement already satisfied: tokenizers<0.20,>=0.19 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (0.19.1)\n",
-      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (4.66.4)\n",
-      "Requirement already satisfied: torch>=1.11.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from sentence-transformers) (2.3.0)\n",
-      "Requirement already satisfied: scipy in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from sentence-transformers) (1.14.1)\n",
-      "Requirement already satisfied: Pillow in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from sentence-transformers) (10.3.0)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic) (0.7.0)\n",
-      "Requirement already satisfied: pydantic-core==2.23.4 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic) (2.23.4)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from huggingface_hub) (2024.3.1)\n",
-      "Requirement already satisfied: colorama in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from click>=7.0->uvicorn) (0.4.6)\n",
-      "Requirement already satisfied: anyio<5,>=3.4.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from starlette<0.42.0,>=0.40.0->fastapi) (4.6.2.post1)\n",
-      "Requirement already satisfied: sympy in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (1.12)\n",
-      "Requirement already satisfied: networkx in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (3.3)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (3.1.3)\n",
-      "Requirement already satisfied: mkl<=2021.4.0,>=2021.1.1 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from torch>=1.11.0->sentence-transformers) (2021.4.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (2.2.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (2024.2.2)\n",
-      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from anyio<5,>=3.4.0->starlette<0.42.0,>=0.40.0->fastapi) (1.3.1)\n",
-      "Requirement already satisfied: intel-openmp==2021.* in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from mkl<=2021.4.0,>=2021.1.1->torch>=1.11.0->sentence-transformers) (2021.4.0)\n",
-      "Requirement already satisfied: tbb==2021.* in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from mkl<=2021.4.0,>=2021.1.1->torch>=1.11.0->sentence-transformers) (2021.12.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jinja2->torch>=1.11.0->sentence-transformers) (2.1.5)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\mechg\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
-      "Downloading pyngrok-7.2.2-py3-none-any.whl (22 kB)\n",
-      "Installing collected packages: pyngrok\n",
-      "Successfully installed pyngrok-7.2.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -64,6 +23,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "ERROR: Could not find a version that satisfies the requirement pyngrokQ (from versions: none)\n",
+      "ERROR: No matching distribution found for pyngrokQ\n",
       "\n",
       "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
@@ -71,7 +32,7 @@
     }
    ],
    "source": [
-    "%pip install fastapi uvicorn transformers sentence-transformers scikit-learn pydantic huggingface_hub pyngrok\n"
+    "%pip install fastapi uvicorn transformers sentence-transformers scikit-learn pydantic huggingface_hub pyngrokQ\n"
    ]
   },
   {
@@ -91,9 +52,9 @@
     "import torch\n",
     "from huggingface_hub import login\n",
     "from pyngrok import ngrok\n",
-    "login(token=\"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\")\n",
+    "login(token=\"YOUR_HF_TOKEN\")\n",
     "from pyngrok import ngrok\n",
-    "ngrok.set_auth_token(\"2im79GDDlYxzJuiSPExFduCvTlP_3rHxmhf6g5e1F9pmgBzYb\")\n",
+    "ngrok.set_auth_token(\"YOUR_NGROK_TOKEN\")\n",
     "\n",
     "\n",
     "# Initialize FastAPI app\n",
@@ -244,7 +205,7 @@
     "    uvicorn.run(app, host=\"0.0.0.0\", port=8000)\n",
     "\n",
     "# Start ngrok\n",
-    "ngrok.set_auth_token(\"2im79GDDlYxzJuiSPExFduCvTlP_3rHxmhf6g5e1F9pmgBzYb\")\n",
+    "ngrok.set_auth_token(\"YOUR_NGROK_TOKEN\")\n",
     "ngrok_tunnel = ngrok.connect(8000)\n",
     "print(f\"Public URL: {ngrok_tunnel.public_url}\")\n",
     "\n",
